--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,65 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@font-face {
+  font-family: "Plus Jakarta Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url("/fonts/PlusJakartaSans-SemiBold.woff2") format("woff2"),
+    url("/fonts/PlusJakartaSans-SemiBold.woff") format("woff");
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
-a {
-  color: inherit;
+/* index.css 📂 */
+span.marker::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 5px;
+  position: absolute;
+  left: 0;
+  bottom: 0px;
+  background: rgba(200, 125, 220, .6);
+}
+span.marker {
+  position: relative;
+}
+span.marker::after {
+  width: 100%;
+}
+.underline {
+  position: relative;
+  @apply text-[hsl(216,10%,10%)] dark:text-[#ffffff];
   text-decoration: none;
+}
+
+.underline:hover {
+  @apply text-[hsl(216,10%,10%)] dark:text-[#ffffff];
+}
+
+.underline::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  @apply bg-[#000000] dark:bg-[#ffffff];
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.underline:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 * {
@@ -23,4 +74,42 @@ a {
     color: white;
     background: black;
   }
+}
+.logo {
+  font-family: "Plus Jakarta Sans", Pretendard, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+#overlay {
+  background: black;
+  opacity: 0;
+  transition: opacity 0.3s cubic-bezier(0.7, 0, 0.2, 1);
+  z-index: 100;
+  pointer-events: none;
+  will-change: opacity;
+}
+.menu-open #overlay {
+  opacity: 0.2;
+  pointer-events: all;
+}
+#menu {
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  z-index: 100;
+  transform: translate(calc(100% + 6vw), 0) rotate(0.001deg);
+  transition: transform 0.6s cubic-bezier(0.7, 0, 0.2, 1);
+  will-change: transform;
+}
+.menu-open #menu {
+  transform: translate(0, 0) rotate(0.001deg);
+}
+#menu .links a {
+  @apply text-[hsl(216,10%,10%)] dark:text-[hsl(216,10%,70%)];
+}
+
+.container {
+  max-width: 1240px;
+  padding: 0px 1.5rem;
+  width: 100%;
 }
